# red-team-kit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  EVOLUTION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_council.py  batch_evaluation.py  custom_scoring.py
hypotheses/cross_domain/: h001.yaml  h002.yaml  h003.yaml  h004.yaml
hypotheses/financial/: h001.yaml  h002.yaml  h003.yaml  h004.yaml  h005.yaml  h006.yaml  h007.yaml  h008.yaml  h009.yaml  h010.yaml  h011.yaml  h012.yaml
hypotheses/market/: h001.yaml  h002.yaml  h003.yaml  h004.yaml  h005.yaml  h006.yaml  h007.yaml  h008.yaml
hypotheses/meta/: h001.yaml  h002.yaml  h003.yaml  h004.yaml
hypotheses/operational/: h001.yaml  h002.yaml  h003.yaml  h004.yaml  h005.yaml  h006.yaml  h007.yaml  h008.yaml
hypotheses/strategic/: h001.yaml  h002.yaml  h003.yaml  h004.yaml  h005.yaml  h006.yaml  h007.yaml  h008.yaml
hypotheses/synthesis/: h001.yaml  h002.yaml  h003.yaml  h004.yaml
hypotheses/temporal/: h001.yaml  h002.yaml  h003.yaml  h004.yaml
redteamkit/: __init__.py  agent.py  council.py  llm.py  report.py  scoring.py
tests/: conftest.py  test_agent.py  test_council.py  test_council_extended.py  test_error_hardening.py  test_hypotheses.py  test_llm.py  test_llm_extended.py  test_performance.py  test_property_based.py  test_report.py  test_report_extended.py  test_scoring.py  test_scoring_extended.py  test_security.py
