[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redteamkit"
version = "0.1.0"
description = "Adversarial hypothesis testing framework for strategic decision-making"
readme = {text = "Adversarial hypothesis testing framework", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
